update translator app